# BioSim_G03_Amir_Sebastian

./: .gitignore  MANIFEST  README.md  readme.md  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: conf.py  index.html  index.rst
doc/_build/doctrees/: animals.doctree  cell.doctree  codedoc.doctree  developers.doctree  environment.pickle  examples.doctree  gui.doctree  index.doctree  map.doctree  simulation.doctree  simulation_tests.doctree  test_cells.doctree  test_interface.doctree  test_map.doctree
doc/_build/html/: .buildinfo  animal_tests.html  animals.html  cell.html  codedoc.html  developers.html  genindex.html  gui.html  index.html  map.html  objects.inv  (+7 more)
docs/: animals.html  codedoc.html  developers.html  examples.html  genindex.html  index.html  map.html  map.rst  objects.inv  py-modindex.html  searchindex.js  simulation.html  simulation_tests.html
docs/_sources/: animal_tests.rst.txt  animals.rst.txt  codedoc.rst.txt  developers.rst.txt  simulation.rst.txt  test_map.rst.txt
docs/html/: cell.html  gui.html  index.html  search.html  searchindex.js  simulation.html
examples/: check_sim.py  example_simulation.py
pip-wheel-metadata/biosim.dist-info/: METADATA
src/biosim/: __init__.py  animals.py  approxexp.h  cell.py  compute_fit.c  compute_fit.cp37-win_amd64.pyd  compute_fit.pyx  det_kill.c  det_kill.pyx  gui.py  map.py  setup.py  simulation.py  weighted_prob.c  weighted_prob.pyx
src/biosim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.py  test_animals.py  test_biosim_interface.py  test_cell.py  test_map.py  test_simulation.py
(+30 files in other folders)
